references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Connector_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:bf7629bdd9833ae655c97ff95c68f629ad9f2f5a9f5f39ce9c974f421f515a2b
size 1690
